--- a/backend/package.json
+++ b/backend/package.json
@@ -4,32 +4,33 @@
   "description": "Serverless TODO image app",
   "dependencies": {
     "@types/axios": "^0.14.0",
-    "@types/http-errors": "^1.6.1",
-    "aws-xray-sdk": "^2.2.0",
-    "axios": "^1.2.1",
+    "@types/http-errors": "^2.0.1",
+    "aws-xray-sdk": "^3.4.0",
+    "axios": "^1.2.2",
     "cors": "^2.8.5",
-    "http-errors": "^1.7.2",
+    "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.0",
-    "middy": "^0.27.0",
-    "source-map-support": "^0.5.11",
-    "uuid": "^3.3.2",
-    "winston": "^3.2.1"
+    "middy": "^0.36.0",
+    "npm-check-updates": "^16.6.2",
+    "source-map-support": "^0.5.21",
+    "uuid": "^9.0.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.17",
-    "@types/jsonwebtoken": "^8.3.2",
-    "@types/node": "14.17.5",
-    "aws-sdk": "^2.1269.0",
+    "@types/aws-lambda": "^8.10.109",
+    "@types/jsonwebtoken": "^9.0.0",
+    "@types/node": "^18.11.18",
+    "aws-sdk": "^2.1285.0",
     "serverless-aws-documentation": "^1.1.0",
     "serverless-iam-roles-per-function": "^3.2.0",
-    "serverless-plugin-canary-deployments": "^0.4.7",
+    "serverless-plugin-canary-deployments": "^0.8.0",
     "serverless-plugin-tracing": "^2.0.0",
-    "serverless-reqvalidator-plugin": "^2.0.0",
+    "serverless-reqvalidator-plugin": "^3.0.0",
     "serverless-webpack": "^5.11.0",
     "ts-loader": "^9.4.2",
-    "typescript": ">=3.8.0",
+    "typescript": "^4.9.4",
     "webpack": "^5.75.0"
   },
-  "author": "Ivan Mushketyk",
+  "author": "quannhm",
   "license": "MIT"
 }
