--- a/client/package.json
+++ b/client/package.json
@@ -3,27 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.21.4",
-    "dateformat": "^3.0.3",
+    "dateformat": "^5.0.3",
     "immutability-helper": "^3.1.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "@types/dateformat": "^3.0.1",
-    "@types/jest": "26.0.24",
-    "@types/node": "16.3.2",
-    "@types/react": "17.0.14",
-    "@types/react-dom": "17.0.9",
+    "@types/dateformat": "^5.0.0",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "auth0-js": "^9.20.0",
-    "axios": "^0.21.4",
+    "axios": "^1.2.2",
     "typescript": "^4.9.4"
   },
   "scripts": {
